--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,7 @@
 services:
   - type: web
     name: camera-power-planner
-    env: node
+    runtime: node
     buildCommand: 'npm install'
     startCommand: 'npm start'
     envVars:
