Update start command in Render blueprint

--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: camera-power-planner
     runtime: node
     buildCommand: 'npm install'
-    startCommand: 'npm start'
+    startCommand: 'node server.js'
     envVars:
       - key: GITHUB_CLIENT_ID
         sync: false
