--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "camera-power-planner",
   "version": "1.0.0",
-  "description": "This is a browser-based tool for planning professional camera setups powered by V-Mount batteries.   It calculates **total power consumption**, **current draw** (at 14.4 V and 12 V), and **estimated battery runtime**, while checking whether the battery can safely deliver the required power.",
+  "description": "Browser-based tool for planning professional camera setups powered by V-Mount or B-Mount batteries. It calculates total power consumption, current draw at 14.4 V and 12 V, and estimated battery runtime while checking that the battery can safely deliver the required power.",
   "main": "data.js",
   "scripts": {
     "lint": "eslint .",
