--- a/package.json
+++ b/package.json
@@ -21,5 +21,7 @@
     "jest-environment-jsdom": "^30.0.4",
     "jest-localstorage-mock": "^2.4.26"
   },
-  "dependencies": {}
+  "dependencies": {
+    "lz-string": "^1.5.0"
+  }
 }
