Rename app to Cine List

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "camera-power-planner",
+  "name": "cine-list",
   "version": "1.0.0",
   "description": "Browser-based tool for planning professional camera setups powered by V-Mount or B-Mount batteries. It calculates total power consumption, current draw at 14.4 V and 12 V, and estimated battery runtime while checking that the battery can safely deliver the required power.",
   "main": "data.js",
