--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "lint": "eslint .",
     "check-consistency": "node checkConsistency.js",
     "normalize": "node normalizeData.js",
-    "test": "npm run lint && npm run check-consistency && node --max-old-space-size=4096 node_modules/.bin/jest --runInBand"
+    "test": "npm run lint && npm run check-consistency && node --max-old-space-size=4096 node_modules/.bin/jest --runInBand",
+    "start": "http-server ."
   },
   "keywords": [],
   "author": "",
@@ -19,7 +20,8 @@
     "globals": "^16.3.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
-    "jest-localstorage-mock": "^2.4.26"
+    "jest-localstorage-mock": "^2.4.26",
+    "http-server": "^14.1.1"
   },
   "dependencies": {
     "lz-string": "^1.5.0"
