--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "lint": "eslint .",
     "check-consistency": "node checkConsistency.js",
     "normalize": "node normalizeData.js",
-    "test": "npm run lint && npm run check-consistency && node --max-old-space-size=8192 node_modules/.bin/jest --runInBand"
+    "test": "npm run lint && npm run check-consistency && npm run test:jest",
+    "test:jest": "npm run test:unit && npm run test:script",
+    "test:unit": "node --max-old-space-size=8192 node_modules/.bin/jest --runInBand --testPathIgnorePatterns=tests/script.test.js",
+    "test:script": "node --max-old-space-size=8192 node_modules/.bin/jest --runInBand tests/script.test.js"
   },
   "keywords": [],
   "author": "",
