chore: remove unused eslint disable

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "cine-list",
   "version": "1.0.0",
   "description": "Browser-based tool for planning professional camera setups powered by V-Mount or B-Mount batteries. It calculates total power consumption, current draw at 14.4 V and 12 V, and estimated battery runtime while checking that the battery can safely deliver the required power.",
-  "main": "data.js",
+  "main": "data/data.js",
   "scripts": {
     "lint": "eslint .",
-    "check-consistency": "node checkConsistency.js",
-    "normalize": "node normalizeData.js",
+    "check-consistency": "node scripts/checkConsistency.js",
+    "normalize": "node scripts/normalizeData.js",
     "test": "npm run lint && npm run check-consistency && npm run test:jest",
     "test:jest": "npm run test:unit && npm run test:script",
     "test:unit": "jest --runInBand --testPathIgnorePatterns=tests/script.test.js",
