Refine Jest execution for resource efficiency

--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "unify-ports": "node unifyPorts.js",
     "generate-schema": "node generateSchema.js",
     "test": "npm run lint && npm run check-consistency && npm run test:jest",
-    "test:jest": "npm run test:unit && npm run test:data && npm run test:dom && npm run test:script",
-    "test:unit": "jest --selectProjects unit",
-    "test:data": "jest --runInBand --selectProjects data",
-    "test:dom": "jest --runInBand --selectProjects dom",
-    "test:script": "node --max-old-space-size=4096 ./node_modules/jest/bin/jest.js --runInBand --selectProjects script"
+    "test:jest": "node --max-old-space-size=3072 ./node_modules/jest/bin/jest.js --runInBand",
+    "test:unit": "node --max-old-space-size=1024 ./node_modules/jest/bin/jest.js --runInBand --selectProjects unit",
+    "test:data": "node --max-old-space-size=1024 ./node_modules/jest/bin/jest.js --runInBand --selectProjects data",
+    "test:dom": "node --max-old-space-size=1536 ./node_modules/jest/bin/jest.js --runInBand --selectProjects dom",
+    "test:script": "node --max-old-space-size=3072 ./node_modules/jest/bin/jest.js --runInBand --selectProjects script"
   },
   "keywords": [],
   "author": "",
