--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "jest-localstorage-mock": "^2.4.26"
   },
   "dependencies": {
+    "lottie-web": "^5.13.0",
     "lz-string": "^1.5.0"
   }
 }
