--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "help": "node tools/cliHelp.js",
     "normalize": "node tools/normalizeData.js",
     "unify-ports": "node tools/unifyPorts.js",
-    "generate-schema": "node tools/generateSchema.js",
+    "generate-schema": "node tools/generateSchema.js && node tools/createInlineSchema.js",
     "test": "npm run lint && npm run check-consistency && npm run test:jest",
     "test:jest": "node --max-old-space-size=3072 ./node_modules/jest/bin/jest.js --runInBand",
     "test:unit": "node --max-old-space-size=1024 ./node_modules/jest/bin/jest.js --runInBand --selectProjects unit",
