--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cine-power-planner",
   "version": "1.0.2",
-  "description": "Browser-based tool for planning professional camera setups powered by V-Mount or B-Mount batteries. It calculates total power consumption, current draw at 14.4\u202fV and 12\u202fV, and estimated battery runtime while checking that the battery can safely deliver the required power.",
+  "description": "Browser-based tool for planning professional camera setups powered by V-Mount or B-Mount batteries. It calculates total power consumption, current draw at 14.4 V and 12 V, and estimated battery runtime while checking that the battery can safely deliver the required power.",
   "main": "src/data/index.js",
   "scripts": {
     "lint": "eslint .",
@@ -23,16 +23,16 @@
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "@babel/cli": "^7.26.0",
+    "@babel/cli": "^7.28.3",
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
     "@eslint/js": "^9.31.0",
+    "core-js-bundle": "^3.39.0",
     "eslint": "^9.31.0",
     "globals": "^16.3.0",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
     "jest-localstorage-mock": "^2.4.26",
-    "core-js-bundle": "^3.39.0",
     "regenerator-runtime": "^0.14.1"
   },
   "dependencies": {
