--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "cine-power-planner",
-  "version": "1.0.2",
-  "description": "Browser-based tool for planning professional camera setups powered by V-Mount or B-Mount batteries. It calculates total power consumption, current draw at 14.4\u202fV and 12\u202fV, and estimated battery runtime while checking that the battery can safely deliver the required power.",
+  "version": "1.0.3",
+  "description": "Browser-based tool for planning professional camera setups powered by V-Mount or B-Mount batteries. It calculates total power consumption, current draw at 14.4 V and 12 V, and estimated battery runtime while checking that the battery can safely deliver the required power.",
   "main": "src/data/index.js",
   "scripts": {
     "lint": "eslint .",
