Fix share fallback lint configuration and log storage error

--- a/tools/appScriptGlobals.json
+++ b/tools/appScriptGlobals.json
@@ -310,6 +310,7 @@
     "getDeviceChanges",
     "getEasyrigValue",
     "getLocalizedText",
+    "getManualDownloadFallbackMessage",
     "getProjectScopedAutoGearRules",
     "getSelectedPlate",
     "getSetups",
