Add backup version comparison viewer in settings

--- a/tools/appScriptGlobals.json
+++ b/tools/appScriptGlobals.json
@@ -450,6 +450,22 @@
     "autoGearSavePresetButton",
     "autoGearSaveRuleButton",
     "autoGearShowBackupsCheckbox",
+    "backupDiffToggleButton",
+    "backupDiffSection",
+    "backupDiffHeading",
+    "backupDiffIntro",
+    "backupDiffPrimaryLabel",
+    "backupDiffSecondaryLabel",
+    "backupDiffPrimarySelect",
+    "backupDiffSecondarySelect",
+    "backupDiffEmptyState",
+    "backupDiffSummary",
+    "backupDiffList",
+    "backupDiffListContainer",
+    "backupDiffNotesLabel",
+    "backupDiffNotes",
+    "backupDiffExportButton",
+    "backupDiffCloseButton",
     "backupSettings",
     "batteryPlateSelect",
     "batterySelect",
