Ensure pink mode icons adopt pink tint

--- a/tools/appScriptGlobals.json
+++ b/tools/appScriptGlobals.json
@@ -436,6 +436,7 @@
     "autoGearCancelEditButton",
     "autoGearDeletePresetButton",
     "autoGearEditor",
+    "autoGearEditorActiveItem",
     "autoGearEditorDraft",
     "autoGearExportButton",
     "autoGearImportButton",
@@ -450,6 +451,7 @@
     "autoGearSavePresetButton",
     "autoGearSaveRuleButton",
     "autoGearShowBackupsCheckbox",
+    "beginAutoGearDraftItemEdit",
     "backupDiffToggleButton",
     "backupDiffSection",
     "backupDiffHeading",
@@ -485,6 +487,7 @@
     "clearAccentColorOverrides",
     "clearAllData",
     "clearAutoGearDefaultsSeeded",
+    "clearAutoGearDraftItemEdit",
     "clearProjectAutoGearRules",
     "closeAutoGearEditor",
     "closeDialog",
