--- a/tools/appScriptGlobals.json
+++ b/tools/appScriptGlobals.json
@@ -411,6 +411,7 @@
     "activateSettingsTab",
     "activateSharedImportProjectPreset",
     "activeSettingsTabId",
+    "addAutoGearConditionFromPicker",
     "addAutoGearDraftItem",
     "addCustomFontFromData",
     "adjustGearListSelectWidth",
@@ -429,6 +430,9 @@
     "autoGearAddCategorySelect",
     "autoGearAddItemButton",
     "autoGearAddRuleBtn",
+    "autoGearConditionAddButton",
+    "autoGearConditionList",
+    "autoGearConditionSelect",
     "autoGearAddSelectorDefaultInput",
     "autoGearAddSelectorTypeSelect",
     "autoGearBackupRestoreButton",
@@ -575,6 +579,7 @@
     "getSliderBowlValue",
     "gridSnap",
     "gridSnapToggleBtn",
+    "handleAutoGearConditionShortcut",
     "handleAutoGearDeletePreset",
     "handleAutoGearImportSelection",
     "handleAutoGearPresetSelection",
@@ -656,6 +661,7 @@
     "refreshDarkModeAccentBoost",
     "reloadButton",
     "remoteHeadOption",
+    "removeAutoGearCondition",
     "renderAutoGearDraftLists",
     "renderAutoGearRulesList",
     "renderFeedbackTable",
@@ -738,6 +744,7 @@
     "tripodPreferencesSection",
     "tripodSpreaderSelect",
     "tripodTypesSelect",
+    "updateAutoGearConditionAddButtonState",
     "updateAutoGearBackupRestoreButtonState",
     "updateAutoGearCatalogOptions",
     "updateAutoGearMonitorCatalogOptions",
