Persist auto gear highlight preference and add icon

--- a/tools/appScriptGlobals.json
+++ b/tools/appScriptGlobals.json
@@ -181,6 +181,7 @@
     "setButtonLabelWithIcon",
     "setEasyrigValue",
     "setFizConnectors",
+    "setAutoGearHighlightEnabled",
     "setLanguage",
     "setLensMounts",
     "setMonitorVideoInputs",
