--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test:unit": "node --max-old-space-size=1024 ./node_modules/jest/bin/jest.js --runInBand --selectProjects unit",
     "test:data": "node --max-old-space-size=1024 ./node_modules/jest/bin/jest.js --runInBand --selectProjects data",
     "test:dom": "node --max-old-space-size=1536 tools/runDomTests.js",
-    "test:script": "node --max-old-space-size=3072 ./node_modules/jest/bin/jest.js --runInBand --selectProjects script"
+    "test:script": "RUN_HEAVY_TESTS=true node --max-old-space-size=3072 ./node_modules/jest/bin/jest.js --runInBand --selectProjects script"
   },
   "keywords": [],
   "author": "",
