Adjust notification styling

--- a/tools/appScriptGlobals.json
+++ b/tools/appScriptGlobals.json
@@ -634,6 +634,7 @@
     "openDialog",
     "openSideMenu",
     "parseColorToRgb",
+    "computeRelativeLuminance",
     "parseDeviceDatabaseImport",
     "pendingSharedLinkListener",
     "pinkModeHelpIcon",
